# AiogramAdminPanel

./: pyproject.toml
