[tool.poetry]
name = "aiogramadminpanel"
version = "0.1.0"
description = ""
authors = ["Doc-Duck <ivanutkin2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.10.0"
ruff = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
